# video_rep

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  runner.py
migrations/models/: 0_20260218145433_init.py
src/: celery_client.py  main.py
src/core/settings/: db_settings.py  rabbitmq_settings.py  redis_settings.py  settings.py  tortoise_config.py
src/dependancies/states/: states.py
src/reporter/: reporter.py
src/services/: renderer.py
src/tasks/: video_randerer.py
